Add Stress info Endpoint
