# controllers/apiv1stressController.js
@@ -31,3 +31,8 @@ module.exports.getStress = function getStress(req, res, next) {
 
   varapiv1stressController.newStress(req.swagger.params, res, next);
 };
+
+
+module.exports.getStressInfo = function getStressInfo(req, res, next) {
+  varapiv1stressController.getStressInfo(req.swagger.params, res, next);
+};
